<resources>
    <string name="app_name">CatDrive</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_devices">Devices</string>

    <!-- Preference Titles -->
    <string name="device_header">Device</string>
    <string name="service_header">Service</string>

    <string name="device_connect">Select a device</string>
    <string name="no_device_connected">No device connected</string>

    <!-- Service Preferences -->
    <string name="service_enable">Run services</string>
    <string name="service_enable_notice">Requires all permissions allowed &amp; bluetooth turned on</string>
    <string name="missing_permissions">Missing permissions</string>
    <string name="action_settings">Go to notification settings</string>

    <string name="permission_access_notification">Accessing notifications</string>
    <string name="permission_post_notification">Posting notifications</string>
    <string name="permission_access_location">Accessing location</string>
    <string name="permission_access_bluetooth">Accessing bluetooth</string>
    <string name="summary_device_backlight">Turn light theme on or off</string>
    <string name="title_device_backlight">Display light mode</string>
    <string name="summary_display_contrast">Change device LCD contrast to improve visibility</string>
    <string name="title_display_contrast">Display contrast</string>
    <string name="title_speed_limit">Speed warning limit</string>

</resources>