<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/device_header">
        <Preference
            android:key="connect_device"
            android:summary="@string/no_device_connected"
            android:title="@string/device_connect" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="device_backlight"
            android:summary="@string/summary_device_backlight"
            android:title="@string/title_device_backlight" />
        <EditTextPreference
            android:defaultValue="60"
            android:key="speed_warning_limit"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:inputType="number"
            android:title="@string/title_speed_limit" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/service_header">
        <SwitchPreference
            android:defaultValue="false"
            android:key="enable_service"
            android:summary="@string/service_enable_notice"
            android:title="@string/service_enable" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/missing_permissions">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="access_notification"
            android:title="@string/permission_access_notification" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="post_notification"
            android:title="@string/permission_post_notification" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="access_location"
            android:title="@string/permission_access_location" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="access_bluetooth"
            android:title="@string/permission_access_bluetooth" />
    </PreferenceCategory>

</PreferenceScreen>